# depgraph

./: .gitignore  CHANGELOG.md  README.md  hello.py  pyproject.toml
depgraph/: __main__.py  analyze_file.py  assignment_analyzer.py  cli.py  formatter.py  logger.py  parse_file.py  scope_data.py  scope_visitor.py
depgraph/import_crawler/: __init__.py  __main__.py  cli.py  dependency_graph.py  find_local_module.py  import_categorizer.py  import_crawler.py  is_local_module.py  module_info.py  package_finder.py  package_searcher.py  site_packages.py  tree_printer.py
docs/: planning.md
src/depgraph/: __init__.py  __main__.py
src/depgraph/cli/: __init__.py  (+3 more)
tests/: conftest.py  test_assignment_data.py  test_assignment_visitor.py  test_parse_file.py  test_scope_assignment_analyzer.py  test_scope_data.py  test_scope_visitor.py
tests/formatters/: test_process_output.py
tests/import_crawler/: test_build_graph.py  test_dependency_graph.py  test_find_local_module.py  test_find_module.py  test_find_module_in_syspath.py  test_import_categorizer.py  test_is_local_module.py  test_new_package_searcher.py  test_package_finder.py  test_package_searcher.py  test_parse_file.py  test_process_imports.py  test_resolve_import.py  test_site_packages.py  test_src_layout.py  test_tree_printer.py
tests/logging/: test_configure_logging.py  test_get_logger.py
tests/processors/: test_analyze_scope.py
tests/system/: test_analyze_file.py
tests/tools/: test_parse_file.py
tests/visitors/: test_assignment_data.py  test_assignment_visitor.py  test_scope_info.py  test_scope_visitor.py
(+69 files in other folders)
