[project]
name = "depgraph"
version = "0.1.0"
description = "Analyze dependencies in a Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pydeps>=3.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "ty>=0.0.1a7",
]

[tool.mypy]
mypy_path = ["depgraph"]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "silent" # Change to"error"
ignore_missing_imports = false
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "possibly-undefined",
    "redundant-self",
]

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pydeps]
exclude = [
    "depgraph.logging"
]
